--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -524,7 +524,7 @@ html:not(.anon) .d-header .d-header-icons .search-dropdown {
 
 html.anon .d-header .d-header-icons .search-dropdown {
     position: absolute !important;
-    right: 14.4em !important;
+    right: 15em !important;
 }
 
 @media only screen and (min-width: 1050px) {
